--- a/AdventOfCode2024/AdventOfCode2024.csproj
+++ b/AdventOfCode2024/AdventOfCode2024.csproj
@@ -11,6 +11,9 @@
     <None Update="Inputs\Day1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Inputs\Day10.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Inputs\Day2.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
